--- a/scvAndroid/app/src/main/res/layout/activity_cast.xml
+++ b/scvAndroid/app/src/main/res/layout/activity_cast.xml
@@ -1,7 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<WebView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/webView"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
 
-</WebView>
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context="com.example.jy.scv.CastActivity">
+
+
+    <WebView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/webView"
+        android:hardwareAccelerated="true"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+    </WebView>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_gravity="center_vertical" />
+
+    <Button
+        android:id="@+id/quitBtn"
+        android:layout_width="match_parent"
+        android:layout_height="47dp"
+        android:layout_gravity="center_horizontal|bottom"
+        android:textAllCaps="false"
+        android:visibility="invisible"
+        android:layout_marginBottom="0dp"
+        android:textSize="10sp"
+        android:text="Exit Experience\nDue Experience : " />
+
+</FrameLayout>
